v1.7 - Pending
	+ Bug: Fix library sorting when adding, e.g., albums to playlist

v1.6.2 - April 13, 2009
	+ Bug: Fix cli options (e.g. 'sonata play')

v1.6.1 - April 11, 2009
	+ Reduce library's filesystem view row height
	+ More auto-applying of preferences (e.g. format tab)
	+ Bug: Fix python version check for Ubuntu Jaunty
	+ Bug: Traceback if track has multiple date tags
	+ Bug: Fix infinite loop when format strings end in '{'
	+ Bug: Fix music directory chooser selecting the wrong folder sometimes
	+ Bug: Catch OSErrors from os.listdir, e.g. flac files with cue sheets
	+ Bug: Fix --profile option

v1.6 - March 29, 2009
	+ Album browsing mode, additional details in library views
	+ Real-time searching of library (search as you type)
	+ Fullscreen album art mode (via right-click on artwork) (mips)
	+ Improve library searching across meta tags
	+ Sort library search results
	+ Show file path in tooltip for library search results
	+ Improved support for updating less than entire library
	+ Drag-and-drop to copy files from Sonata to a file manager (Kamil)
	+ Ability to show file paths in tag editing window
	+ Use plchanges for faster performance (e.g. add to playlist)
	+ Allow manually fetching remote art when using local art pref (Erik)
	+ Swap mousewheel behavior for progressbar
	+ Only minimize to trayicon on click if focused; raise if not focused
	+ Use new 'listplaylists' command for retrieving playlists
	+ Allow hiding the application's titlebar in preferences
	+ Better error trapping
	+ Make process name 'sonata' for linux (himdel)
	+ Look for <artist> - <title>.txt lyrics files by other clients
	+ Add Traditional Chinese translation (b4283)
	+ Add Japanese translation (Masato)
	+ Add Slovenian translation (Alan)
	+ Code modernisation, modularisation, overall cleanup, documentation
	+ A prototype of a plug-in system
	+ Unicode fixes
	+ Some helpful error messages if startup fails
	+ Useless code removed, various code cleanups and refactorings (Stephen)